--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     </head>
     <body>
     <h1>Contact Information</h1>
-    <h3>app.actie@gmail.com</h3>
-    <h3>amini-rezza@gmail.com</h3>
+    <h3>amini.rezza@gmail.com</h3>
     <h1>Privacy Policy</h1> <p>
                 Actie ('we' or 'us' or 'our') respects the privacy of our users ('user' or 'you').
                 This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
